cmake_minimum_required(VERSION 2.8)
project(opencv_learning)
add_subdirectory(src/test)
add_subdirectory(src/Chapter1)
add_subdirectory(src/Chapter2)
add_subdirectory(src/Chapter3)
add_subdirectory(src/Chapter4)
add_subdirectory(src/Chapter5)
add_subdirectory(src/Chapter6)
add_subdirectory(src/Chapter7)
add_subdirectory(src/Chapter8)
add_subdirectory(src/Project1)
add_subdirectory(src/Project2)
add_subdirectory(src/Project3)